--- a/nfl_guide_front/package.json
+++ b/nfl_guide_front/package.json
@@ -7,6 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+    "a": "next build & next start",
     "json-server": "json-server --port 5000 src/pages/api/teams.json"
   },
   "dependencies": {
